--- a/Vehicles/Vehicles.API/Views/Procedures/Create.cshtml
+++ b/Vehicles/Vehicles.API/Views/Procedures/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vehicles.API.Data.Entities.VehicleType
+﻿@model Vehicles.API.Data.Entities.Procedure
 
 @{
     ViewData["Title"] = "Create";
@@ -6,18 +6,18 @@
 
 <h1>Create</h1>
 
-<h4>Tipo de Vehiculo</h4>
+<h4>Procedimientos</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
            
-             <partial name="_VehicleType"/>
+             <partial name="_Procedure"/>
 
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-success">Volver</a>
+                <a asp-action="Index" class="btn btn-success">Volver</a> 
             </div>
         </form>
     </div>
